# xhs_seo_note_agent_crewai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_gap_finder.py
docs/: FIX_SUMMARY.md  TOOLS_README.md  内容理解和建议agent子系统.md
openspec/: AGENTS.md  project.md
openspec/changes/: 0001-image-generation-and-consistency.md
openspec/changes/0003-implement-competitor-analyst-agent/: design.md  proposal.md  tasks.md
openspec/changes/0004-implement-owned-note-auditor/: proposal.md
openspec/specs/competitor-analyst/: spec.md
openspec/specs/crew-infrastructure/: spec.md
output/: competitor_analysis_老爸测评dha推荐哪几款.json
outputs/: audit_report.json  gap_report.json  optimization_plan.json  optimized_note.json  success_profile_report.json
src/xhs_seo_optimizer/: __init__.py  analysis_helpers.py  attribution.py  context.py  crew.py  crew_competitor_analyst.py  crew_gap_finder.py  crew_optimization.py  crew_owned_note.py  crew_simple.py  flow.py  flow_state.py  main.py  shared_context.py
tests/: README_PHASE0001_TESTS.md  __init__.py  direct_tool_test.py  test_competitor_agent_refactored.py  test_competitor_orchestrator.py  test_flow_integration.py  test_gap_finder.py  test_integration.py  test_optimization_strategist.py  test_owned_note_auditor.py  test_phase0001_e2e.py  test_phase0001_models.py  test_refactoring_validation.py  test_tools_integration.py
tests/test_tools/: __init__.py  test_data_aggregator.py  test_image_generator.py  test_marketing_sentiment.py  test_multimodal_vision.py  test_nlp_analysis.py  test_statistical_delta.py
(+55 files in other folders)
