[project]
name = "xhs-seo-optimizer"
version = "0.1.0"
description = "小红书SEO笔记内容优化Agent (Xiaohongshu SEO Note Content Optimization Agent)"
authors = [{name = "XHS SEO Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.28.0",
    "crewai-tools>=0.2.0",
    "openai>=1.10.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "spacy>=3.7.0",
    "emoji>=2.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xhs_seo_optimizer"]
package-dir = {"" = "src"}

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
